--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -6,7 +6,7 @@
     <h2 class="name">{{data.bookname}}</h2>
     <h6 class="des">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h6>
     <h6 class="author">{{data.authorName}}</h6>
-    <button class="add-card" routerLink="/cart">Add to Card</button>
+    <button class="add-card" routerLink="/product">Add to Card</button>
   </div>
 
   <b class="pt-2">{{data.bookname}}</b>
