--- a/src/app/components/product-card/product-card.component.scss
+++ b/src/app/components/product-card/product-card.component.scss
@@ -84,3 +84,14 @@
   border-radius: 1rem;
 
 }
+
+@media (max-width:700px){
+  .card-body{
+    position: absolute;
+    display: inline;
+    
+    
+
+
+  }
+}
