--- a/src/app/pages/checkout/checkout.page.html
+++ b/src/app/pages/checkout/checkout.page.html
@@ -1,4 +1,13 @@
 <ion-content>
+
+  <ion-breadcrumbs>
+    <ion-breadcrumb routerLink="/">
+      <ion-icon slot="start" name="home"></ion-icon>Home
+    </ion-breadcrumb>
+    <ion-breadcrumb routerLink="/all-books">All Books</ion-breadcrumb>
+    <ion-breadcrumb routerLink="/">Fiction</ion-breadcrumb>
+    
+  </ion-breadcrumbs>
   <ion-grid class="ion-padding checkout-main">
     <ion-row>
       <ion-col size="8">
