--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,6 +1,8 @@
+<ion-header  class="home-header ion-no-border">
+  <app-topbar></app-topbar>
+</ion-header>
 <ion-content [fullscreen]="true">
-  <app-banner></app-banner>
-
+  <app-banner ></app-banner>
   <ion-grid class="ion-padding">
     <ion-row>
       <ion-col size="12">
@@ -14,9 +16,9 @@
     </ion-row>
     <ion-row>
       <swiper #bookSwiper [config]="config">
-      <ng-template swiperSlide *ngFor="let book of trendings; index as i">
+      <ng-template swiperSlide *ngFor="let book of  trendings; index as i">
         <app-product-card [data]="book"></app-product-card>
-         <ion-col size="2" *ngFor="let book of trendings"></ion-col>
+         <ion-col size="2" *ngFor="let book of  trendings"></ion-col>
       </ng-template>
     </swiper>
     </ion-row>
@@ -39,6 +41,26 @@
           <ion-col size="2" *ngFor="let book of latest"></ion-col>
       </ng-template>
       </swiper>
+    </ion-row>
+  </ion-grid>
+  <ion-grid class="ion-padding">
+    <ion-row>
+      <ion-col size="12">
+        <div class="d-flex w-100">
+          <ion-text color="dark">
+            <h2>featured Books</h2>
+          </ion-text>
+          <ion-button class="ms-auto" shape="round" color="dark" routerLink="/all-books">View All</ion-button>
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <swiper #bookSwiper [config]="config">
+      <ng-template swiperSlide *ngFor="let book of featured; index as i">
+        <app-product-card [data]="book"></app-product-card>
+         <ion-col size="2" *ngFor="let book of featured"></ion-col>
+      </ng-template>
+    </swiper>
     </ion-row>
   </ion-grid>
 
