--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -1,4 +1,4 @@
-<ion-toolbar>
+<ion-toolbar >
   <ion-row>
     <ion-col size="9" class="my-auto">
       <div class="d-flex">
@@ -14,7 +14,7 @@
             <small><b>select your location</b></small>
           </div>
         </div>
-
+<!-- 
         <div class="box">
           <input type="checkbox" id="check">
           <div class="search-box">
@@ -23,13 +23,15 @@
                 <ion-icon name="search"></ion-icon>
               </label>
             </div>
-        </div>
-        <!-- <ion-searchbar animated="true" color="light"></ion-searchbar> -->
+        </div> -->
+        <ion-searchbar  routerLink="/search" animated="true" color="light"></ion-searchbar>
+        <!-- <ion-button class="ion-margin-start me-2" Fill="clear" (click)="onNavigate('/search')">
+          <ion-icon class="home-search-icon" name="search-outline"></ion-icon>
+        </ion-button> -->
       </div>
-      
-  
     </ion-col>
-    <ion-col size="3" class="my-auto ion-text-end">
+     <ion-col size="3" class="my-auto ion-text-end list">
+      <ion-toggle class="toggle"(ionChange)="onThemeChange($event)" [checked]="currentTheme"></ion-toggle>
       <app-login></app-login>
       <ion-button fill="clear" id="popover-button" color="dark">Vinoth</ion-button>
       <ion-popover trigger="popover-button" [dismissOnSelect]="true">
