--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -48,7 +48,7 @@
       <ion-col size="12">
         <div class="d-flex w-100">
           <ion-text color="dark">
-            <h2>featured Books</h2>
+            <h2>Featured Books</h2>
           </ion-text>
           <ion-button class="ms-auto" shape="round" color="dark" routerLink="/all-books">View All</ion-button>
         </div>
