book-details,trending,featured,banner.latesr

--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,4 +1,4 @@
-<a class="product-card" routerLink="/product/{{data.bookId}}">
+<a class="product-card" routerLink="/book-details/{{data.bookId}}">
   <img class="pc-img" [src]="data.posterurl" />
 
   <div class="card-body">
