--- a/src/app/modules/login/login.component.scss
+++ b/src/app/modules/login/login.component.scss
@@ -17,7 +17,7 @@
                     cursor: pointer;
 
                     &:hover {
-                        color: var(--ion-color-primary);
+                        color: var(--ion-color-);
                     }
                 }
             }
