--- a/src/app/pages/all-books/all-books.page.html
+++ b/src/app/pages/all-books/all-books.page.html
@@ -1,3 +1,9 @@
+<!-- top Navigation bar-->
+<ion-header class="home-header ion-no-border">
+  <app-topbar></app-topbar>
+</ion-header>
+
+
 <ion-content>
   <ion-grid class="ion-padding">
     <ion-row>
