--- a/src/app/components/product-card/product-card.component.scss
+++ b/src/app/components/product-card/product-card.component.scss
@@ -1,30 +1,36 @@
 .product-card {
-  display       : flex;
-  flex-direction: column;
+  display       : block;
+  flex-direction: 1%;
+  max-width: 300px;
+  max-height: 500px;
   text-decoration: none;
+  padding: 30px;
 
   .pc-img {
-    border-radius: 1rem;
+    border-radius:20px;
+    width: 250px;
+    height: 300px;
+    padding:15px;
+    object-fit:fill;
   }
- 
+
 }
 .product-card:hover{
-  transform: scaleY(0.9)
+  transform: scale(0.9)
 }
 .product-card:hover .card-body{
-  opacity: 1;
-
+  opacity: 5;
 }
 
 .card-body{
+  align-self: center;
+  max-height: 50px;
+  margin-top: -40px;
+  margin-left: -5%;
   opacity: 0;
-  width: 100%;
-  height: 100%;
-  position:absolute;
-  top: -13%;
+  position:auto;
   left: 0;
   z-index:2;
-  background: linear-gradient(to bottom,rgba(4,8,15,0),#192133 90%);
   padding: 10px;
   transition: 0.3s;
   border-radius: 1rem;
@@ -37,7 +43,7 @@
   font-weight: 500;
   text-transform: capitalize;
   margin-top: 100%;
-  text-align: center;
+  text-align: right;
 
 }
 .des{
@@ -55,7 +61,7 @@
 }
 .add-card{
   position: relative;
-  width: 100%;
+  width: -50%;
   text-transform: capitalize;
   background: none;
   border: none;
@@ -64,7 +70,7 @@
   color: rgba(255,255,255,0.5);
   margin: 5px 0;
   cursor: pointer;
-  padding: 10px 5px;
+  padding: 1px 2px;
 
 }
 .add-card::before{
@@ -72,8 +78,8 @@
   position: absolute;
   top: 0;
   left: -5px;
-  width: 35px;
-  height: 35px;
+  width: 1px;
+  height: 1px;
   background-size: cover;
   transform: scale(0.4);
   border-radius: 1rem;
@@ -85,7 +91,8 @@
 
 }
 
-@media (max-width:700px){
+
+@media (max-width:20px){
   .card-body{
     position: absolute;
     display: inline;
