--- a/src/app/layout/topbar/topbar.component.scss
+++ b/src/app/layout/topbar/topbar.component.scss
@@ -3,22 +3,25 @@
     .dl-icon {
       font-size: 1.5rem;
     }
-  
+
     .dl-txt {
       width: max-content;
     }
   }
  img{
   cursor: pointer;
- } 
+ }
  .toggle{
   position:relative;
-  bottom: -20px;
+  bottom: -25px;
+  height: 30px;
+  width: 55px;
+  padding: 10px;
  }
 .box{
   max-width: 500px;
   width: 100%;
-  position: relative;
+  position: center;
   left: 35%;
 
 }
@@ -28,26 +31,26 @@
   max-width: 50px;
   background: #ccc;
   margin: auto;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.25);
-  border-radius: 25px;
+  box-shadow: 0 5px 10px white;
+  border-radius: 5px;
   transition: all 0.3s ease;
 }
 .search-box input{
- position:absolute;
+ position:auto;
  height: 100%;
  width: 100%;
- border-radius: 25px;
+ border-radius: 5px;
  background: #fff;
  color: #000;
  outline: none;
  border: none;
- padding-left: 20px;
+ padding-left: 50px;
  font-size: 18px;
 
 }
 #check:checked ~ .search-box{
   max-width: 380px;
-} 
+}
 .search-box .icon {
  position: absolute;
  right: -2px;
@@ -129,6 +132,6 @@
   @media (max-width:700px){
     ion-toolbar{
       position:relative;
-      
+
     }
   }
