--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,7 +1,7 @@
 #container {
   text-align: center;
 
-  position : absolute;
+  position : center;
   left     : 0;
   right    : 0;
   top      : 50%;
@@ -17,11 +17,14 @@
   font-size  : 16px;
   line-height: 22px;
 
-  color: #8c8c8c;
+  color: #771717;
 
   margin: 0;
 }
 
 #container a {
   text-decoration: none;
+}
+.btnshape{
+
 }
