--- a/src/assets/css/vrna-theme.scss
+++ b/src/assets/css/vrna-theme.scss
@@ -11,7 +11,7 @@
 
 
 body {
-    font-family: 'Lato';
+    font-family: 'Amazon Ember';
 }
 
 ion-modal.movie-details-modal {
@@ -21,7 +21,7 @@ ion-modal.movie-details-modal {
 .common-genre {
     ul {
         font-size  : 12px;
-        font-family: 'Lato-light';
+        font-family: 'Amazon Ember';
         list-style : none;
         margin     : 0px 0 0px 0;
         padding    : 0px 0 10px 0;
@@ -50,14 +50,14 @@ ion-modal.movie-details-modal {
     ion-img {
         height  : 20px;
         position: absolute;
-        left    : 0px;
+        left    : 10px;
     }
 
     &.google-login {
-        background-color: #fff9e7;
+        background-color: #f4f3f7;
         border-radius   : 15px;
         border          : 1px solid #fff6d3;
-        color           : #f41d2a;
+        color           : hsl(266, 77%, 59%);
     }
 
     &.fb-login {
@@ -78,8 +78,8 @@ ion-modal.movie-details-modal {
 
 ion-modal.add-new-card-modal {
     --max-height  : 275px;
-    align-items   : flex-end;
-    padding-bottom: 10px;
+    align-items   : flex-start;
+    padding-bottom: 40px;
     border-radius : 30px 30px;
 }
 
