--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -11,7 +11,7 @@
     <button class="add-card" routerLink="/product">Add to Card</button>
   </div>
 
-  <h5 class="pt-2" text="wrap_text">{{data.bookname}}</h5>
+  <b class="pt-2" text="wrap_text">{{data.bookname}}</b>
 
   <div class="d-flex">
     <ion-icon color="warning" name="star"></ion-icon>
@@ -26,11 +26,11 @@
     <small colour="danger"><b>Deal</b></small>
   </div>
   MRP <s>2,999</s>
-  <ion-fab vertical="center" horizontal="end" slot="fixed" color="darken">
+  <!-- <ion-fab vertical="center" horizontal="end" slot="fixed" color="darken">
     <ion-fab-button>
       <ion-icon name="add" color="darken"></ion-icon>
     </ion-fab-button>
-  </ion-fab>
+  </ion-fab> -->
 
   <small class="pt-1">{{data.authorName}}</small>
 </a>
