--- a/src/app/pages/book-details/book-details.page.html
+++ b/src/app/pages/book-details/book-details.page.html
@@ -406,7 +406,7 @@ img {
                             <ion-label color="warning"></ion-label>
                           </ion-button>
                         </div>
-                        <br />
+                        <br/>
                         <div>
                           &nbsp;&nbsp;&nbsp;
                           <ion-icon size="photo_size_select_large" name="lock-closed" fill="darken"></ion-icon>
@@ -419,7 +419,7 @@ img {
                         </div>
                         <br />
                         <div>
-                          <ion-button color="dark" fill="outline" shape="round">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Add to
+                          <ion-button color="dark" fill="outline" (click)="addToWishList()" shape="round">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Add to
                             Wish
                             List&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</ion-button>
                         </div>
