--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -85,7 +85,7 @@
         <p></p>
         <ion-icon class="fa fa-sign-out fa-2x"></ion-icon>
       </ion-button>
-      <ion-button fill="clear" color="dark" routerLink="/notification">
+      <ion-button fill="clear" color="dark"  routerLink="/wish-list">
         <ion-icon slot="start" name="notifications"></ion-icon>
         <ion-badge slot="start" color="danger" Data-Badge siz="medium">2</ion-badge>
       </ion-button>
