--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -67,7 +67,7 @@ background-size:contain;
 </ion-header>
 <ion-content [fullscreen]="false">
   <ion-item-group>
-  <app-banner ></app-banner>
+  <app-banner></app-banner>
 </ion-item-group>
   <ion-item-group>
   <ion-grid class="ion-padding">
@@ -114,13 +114,14 @@ background-size:contain;
     </ion-row>
   </ion-grid>
 </ion-item-group>
+
 <ion-item-group>
-  <ion-grid >
+  <ion-grid class="ion-padding">
     <ion-row>
       <ion-col size="11.5">
         <div class="d-flex w-100">
           <ion-text color="dark">
-            <h2>  Featured Books</h2>
+            <h2>Featured Books</h2>
           </ion-text>
           <ion-button class="ms-auto" shape="rectangle" color="primary" routerLink="/all-books">View All</ion-button>
         </div>
